20000408-14:11 DST Paul Tucker <ptucker@sympatico.ca>
   * source/rtl/dir.c
     * correct MING 8.3 support (which I broke)

20000408-15:28 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rtl/tbrowse.prg
     ! ::New() was initializing a few instance variables to nil instead of {}
       (aRedraw, aRect, aRectColor) and DBU.EXE compiled with debugger died
       in ::Invalidate(275).

20000408-11:05 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rtl/filesys.c
     + Added file locking to OS/2 (both GCC and icc)
     ! fixed file committing under OS/2 (no need to duplicate a file handle)

20000407-15:25 GMT+2 Maurilio Longo <maurilio.longo@libero.it>

   * source/rtl/diskspac.c
     + Added OS/2 (GCC and icc) support
   * tests/MakeFile
     + db_brows was missing from sources list

20000407-03:26 GMT+1 Victor Szakats <info@szelvesz.hu>

   * include/hbver.h
     + Version bumped.

   * doc/whatsnew.txt
     + Some new items.

2000-04-06 21:30 GMT-4 David G. Holm <dholm@jsd-llc.com>
  * doc/gmake.txt
    % Change to os2/gcc documentation to show gtos2 for HT_GT_LIB,
      (thanks to Maurilio Longo <maurilio.longo@libero.it> for
      his work on making the gtos2 library work with os2/gcc)

20000406-10:55 GMT+1 Ryszard Glab <rglab@imid.med.pl>

    *source/compiler/harbour.y
   * the parser resumes parsing after 'parse errors' (parsing errors
   are non-fatal now)

20000406-08:52 GMT+1 Victor Szakats <info@szelvesz.hu>

   * config/dos/dir.cf
     ! Accidentally broken file restored.

   * utils/hbtest/Makefile
   * utils/hbtest/make_xpp.cmd
     ! Fixed.

   * include/box.ch
     + Some extensions guarded as such.

   * source/rtl/math.c
     + Multithreading related NOTE added.

   * make_b16.bat
     + CLEAN will remove .MAP files.

20000405-15:29 GMT+1 Victor Szakats <info@szelvesz.hu>

   + utils/hbtest/rt_hvma.prg
   * utils/hbtest/*
   * makefile.*
     ! rt_hvm.prg split to make it compile with BCC31 under lower memory