@@ -1,3 +1,8 @@
+20000408-20:45 GMT+1 Ryszard Glab <rglab@imid.med.pl>
+
+    *source/rtl/gtcrs/gtcrs.c
+	* added key mapping using terminfo database
+
 20000408-14:11 DST Paul Tucker <ptucker@sympatico.ca>
    * source/rtl/dir.c
      * correct MING 8.3 support (which I broke)
